--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,3 +18,12 @@
 .btn-guardar:focus{
     box-shadow:0 0 0 3px rgba(121,82,179,0.25)
 }
+
+.top_navigator{
+    background-color: #51406A ;
+    width: 100%;
+    height: 80px;
+}
+.nombre_empresa_c{
+    font-family:Combo;
+}
