--- a/views/users.ejs
+++ b/views/users.ejs
@@ -17,40 +17,23 @@
     </style>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand" href="#page-top">Lacteos</a>
+            <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <form action="/register_user" method="POST">
+                    <button type="submit" > Agregar </i></button>
+                </form> 
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <div class="shadow-lg pb-3 mb-5 bg-body rounded">
             <h4>Datos del usuario</h4>
-            <form action="/add" method="POST">
-                <div class="col-md-6">
-                    <label for="documento" class="form-label">Documento</label>
-                    <input id="documento" name="documento" type="text" class="form-control" required>
-                </div>
-                
-                <div class="col-md-6">
-                    <label for="apellidos" class="form-label">Apellidos</label>
-                    <input id="apellidos" name="apellidos" type="text" class="form-control" required>
-                </div>
-
-                <div class="col-md-6">
-                    <label for="nombres" class="form-label">Nombres</label>
-                    <input id="nombres" name="nombres" type="text" class="form-control" required>
-                </div>
-                
-                <div class="col-md-6">
-                    <label for="email" class="form-label">Correo Electronico</label>
-                    <input id="email" name="email" type="text" class="form-control" required>
-                </div>
-
-                <div class="col-md-6">
-                    <label for="rol" class="form-label">Rol</label>
-                    <select id="disabledSelect" class="form-select">
-                        <option>administrador</option>
-                        <option>conductor</option>
-                        <option>vendedor</option>
-                      </select>
-                </div>
-                <button type="submit" class="w-100 btn btn-guardar btn-lg"> <i class="bi bi-save"></i></button>
-            </form>
 
             <table id="tableUsers" class="table mt-4"> 
                 <thead>
