--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,35 +1,119 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Lacteos_ACB</title>
-    <style>
-        .container{
-            max-width: 960px;
-        }
-    </style>
   </head>
-  <body>
-      <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand" href="#page-top">Lacteos</a>
-            <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <form action="/log_in" method="POST">
-                    <button type="submit" > Iniciar Sesionnn</i></button>
-                </form>
-            </div>
+  <body style="margin: 0; padding: 0; width: 100%">
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: white"
+    >
+      <div class="container-fluid">
+        <a
+          class="navbar-brand"
+          href="#"
+          style="
+            margin: 0 35px;
+            color: #51406a;
+            font-size: 4rem;
+            font-weight: 500;
+          "
+          >Lacteos</a
+        >
+        <div
+          class="grid"
+          style="display: grid; grid-template-rows: repeat(2, 1fr)"
+        >
+          <a
+            class="navbar-brand"
+            href="#"
+            style="font-size: 21px; color: #51406a"
+            >del altiplano</a
+          >
+          <a
+            class="navbar-brand"
+            href="#"
+            style="font-size: 21px; color: #51406a"
+            >Cundi-Boyacence.</a
+          >
         </div>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul
+            class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll"
+            style="--bs-scroll-height: 100px"
+          ></ul>
+          <form action="/log_in" method="POST" class="d-flex">
+            <button
+            type="submit"
+              class="btn btn-light"
+              style="margin: 0 35px; background-color: #e5e5e5; color: #51406a"
+            >
+              Iniciar Sesión
+            </button>
+          </form>
+        </div>
+      </div>
+      <div>
+        <button
+          class="
+            navbar-toggler
+            text-uppercase
+            font-weight-bold
+            bg-primary
+            text-white
+            rounded
+          "
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          Menu
+          <i class="fas fa-bars"></i>
+        </button>
+      </div>
     </nav>
-</body>
+    <div
+      style="
+        width: 100%;
+        height: calc(100vh - 230px);
+        margin: 0;
+        background-color: #51406a;
+      "
+      class="w-100 p-3"
+    ></div>
+    <div
+      style="width: 100%; height: 100px; background-color: white"
+      class="w-100 p-3"
+    >
+      <p
+        style="
+          font-size: 3rem;
+          text-align: center;
+          color: #51406a;
+          font-weight: 400;
+        "
+      >
+        ¡nuestros productos!
+      </p>
+    </div>
+  </body>
 </html>
