--- a/views/users.ejs
+++ b/views/users.ejs
@@ -17,23 +17,37 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand" href="#page-top">Lacteos</a>
-            <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <form action="/register_user" method="POST">
-                    <button type="submit" > Agregar </i></button>
-                </form> 
-            </div>
-        </div>
-    </nav>
+
+    <div
+      class="container-fluid"
+      style="padding: 15px 0; background-color: #51406a"
+    >
+
+      <a href="/home" style="color: white; text-decoration: none;  margin-left: 30px; font-size: 24px; font-weight: 400"
+        >LACTEOS DEL ALTIPLANO CB
+      </a>
+
+      <a href="/log_in" style="text-decoration: none; color: red; position:absolute; top:4%; left:80%;"> Cerrar Sesion</a>
+     
+    </div>
+
     <div class="container">
+
+      
+
         <div class="shadow-lg pb-3 mb-5 bg-body rounded">
-            <h4>Datos del usuario</h4>
+            
+          <h4>Usuario registrados</h4>
+
+          <form action="/register_user" method="POST" style="position:absolute; top:11%; left:67%;">
+            <button
+            type="submit"
+              class="btn btn-light"
+              style="margin: 0 35px; background-color: #e5e5e5; color: #51406a"
+            >
+            Agregar
+            </button>
+          </form>
 
             <table id="tableUsers" class="table mt-4"> 
                 <thead>
@@ -57,8 +71,8 @@
                             <td><%= user.email %></td>
                             <td><%= user.role %></td>
                             <td>
-                                <a type="button" class="btnEditar btn btn-outline-primary bi bi-pencil"></a>
-                                <a href="/borrar/<%= user._id %>" class="btn btn-outline-danger bi bi-trash"></a>
+                                <a type="button" class="btnEdit btn btn-outline-primary bi bi-pencil"></a>
+                                <a href="/delete/<%= user._id %>" class="btn btn-outline-danger bi bi-trash"></a>
                             </td>
                         </tr>
                     <% }) %>
@@ -67,7 +81,82 @@
         </div>
     </div>
 
+   
+<div id="modalUser" class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header" style="background-color: #51406a;" >
+        <h5 class="modal-title" id="exampleModalLabel" style="color: #ffffff;" >Edite los datos del usuario</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+
+      
+
+      <div class="modal-body">
+        <form action="/edit" method="POST">
+
+          <input id="id_edit" name="id_edit" type="text" hidden>
+
+          <div class="mb-3">
+            <label for="document_edit" class="col-form-label">Documento:</label>
+            <input id="document_edit" name="document_edit" type="text" class="form-control" id="recipient-name">
+          </div>
+
+          <div class="col-md-6">
+            <label for="apellidos_edit" class="form-label">Apellidos</label>
+            <input
+              id="apellidos_edit"
+              name="apellidos_edit"
+              type="text"
+              class="form-control"
+              required
+            />
+          </div>
+
+          <div class="col-md-6">
+            <label for="nombres_edit" class="form-label">Nombres</label>
+            <input
+              id="nombres_edit"
+              name="nombres_edit"
+              type="text"
+              class="form-control"
+              required
+            />
+          </div>
+
+          <div class="col-md-6">
+            <label for="email_edit" class="form-label">Correo Electronico</label>
+            <input
+              id="email_edit"
+              name="email_edit"
+              type="text"
+              class="form-control"
+              required
+            />
+          </div>
+
+          <div class="col-md-6">
+            <label for="rol_edit" class="form-label">Rol</label>
+            <select id="disabledSelect" name="rol_edit" class="form-select">
+              <option>administrador</option>
+              <option>conductor</option>
+              <option>vendedor</option>
+            </select>
+          </div>
+
+          <div class="modal-footer">
+            <button type="submit" style="background-color: #51406a;" class="btn btn-primary">Actualizar</button>
+          </div>
+        </form>
+      </div>
+
+     
+    </div>
+  </div>
+</div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-        
+    <script src="js/code.js"></script>    
   </body>
 </html>
