--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,10 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
+    <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../public/css/style.css" />
     <title>Lacteos_ACB</title>
   </head>
   <body style="margin: 0; padding: 0; width: 100%">
@@ -25,8 +24,8 @@
       style="background-color: white"
     >
       <div class="container-fluid">
-        <a
-          class="navbar-brand"
+        <a 
+          class="navbar-brand cosauno"
           href="#"
           style="
             margin: 0 35px;
